--- a/CSharpPartOne/05.Conditional-Statements/11-NumberToText/11-NumberToText.csproj
+++ b/CSharpPartOne/05.Conditional-Statements/11-NumberToText/11-NumberToText.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{095248DF-B5FF-4AAE-B9E7-F4F761DB0D7E}</ProjectGuid>
+    <ProjectGuid>{7793DF41-E6EA-4AC5-84B5-6618F695051E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_09_SubSet</RootNamespace>
-    <AssemblyName>09-SubSet</AssemblyName>
+    <RootNamespace>_11_NumberToText</RootNamespace>
+    <AssemblyName>11-NumberToText</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="09-SubSet.cs" />
+    <Compile Include="11-NumberToText.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
