--- a/CSharpPartOne/Exam/03-ForestRoad/03-ForestRoad.csproj
+++ b/CSharpPartOne/Exam/03-ForestRoad/03-ForestRoad.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8D36BB34-2863-429C-AB34-03C4B8430A02}</ProjectGuid>
+    <ProjectGuid>2e3b452a-cc4f-4ea3-85d4-b885d580c14a</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_02_MissCat</RootNamespace>
-    <AssemblyName>02-MissCat</AssemblyName>
+    <RootNamespace>_03_ForestRoad</RootNamespace>
+    <AssemblyName>_03_ForestRoad</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="02-MissCat.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
