--- a/CSharpPartOne/Exam/04-BinaryDigitsCount/04-BinaryDigitsCount.csproj
+++ b/CSharpPartOne/Exam/04-BinaryDigitsCount/04-BinaryDigitsCount.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2330E624-2A33-4BA8-8A0A-3311EC11390F}</ProjectGuid>
+    <ProjectGuid>{3E6A2BB2-8782-47B1-A240-D6B2427F71C8}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03_ForestRoad</RootNamespace>
-    <AssemblyName>03-ForestRoad</AssemblyName>
+    <RootNamespace>_04_BinaryDigitsCount</RootNamespace>
+    <AssemblyName>04-BinaryDigitsCount</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03-ForestRoad.cs" />
+    <Compile Include="04-BinaryDigitsCount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
