--- a/CSharpPartOne/Exam/05-SubsetSums/05-SubsetSums.csproj
+++ b/CSharpPartOne/Exam/05-SubsetSums/05-SubsetSums.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2330E624-2A33-4BA8-8A0A-3311EC11390F}</ProjectGuid>
+    <ProjectGuid>{54B34A0C-7D0E-4C84-B791-5941B8DF744C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03_ForestRoad</RootNamespace>
-    <AssemblyName>03-ForestRoad</AssemblyName>
+    <RootNamespace>_05_SubsetSums</RootNamespace>
+    <AssemblyName>05-SubsetSums</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03-ForestRoad.cs" />
+    <Compile Include="05-SubsetSums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
