--- a/CSharpPartOne/Exam/Problem 4 - Odd Number/Problem 4 - Odd Number.csproj
+++ b/CSharpPartOne/Exam/Problem 4 - Odd Number/Problem 4 - Odd Number.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D656F368-722F-4A96-B734-B37711C7AE20}</ProjectGuid>
+    <ProjectGuid>{AB67A086-1160-47B0-B1D9-0D2D21B24470}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Problem_2___Least_Majority_Multiple</RootNamespace>
-    <AssemblyName>Problem 2 - Least Majority Multiple</AssemblyName>
+    <RootNamespace>Problem_4___Odd_Number</RootNamespace>
+    <AssemblyName>Problem 4 - Odd Number</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LeastMajorityMultiple.cs" />
+    <Compile Include="OddNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
