--- a/CSharpPartOne/Strings/CountCharsInArray/CountCharsInArray.csproj
+++ b/CSharpPartOne/Strings/CountCharsInArray/CountCharsInArray.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>fc1306c7-222d-41c4-a0ff-23eb98908cf9</ProjectGuid>
+    <ProjectGuid>{A62A3A96-6D32-498F-9739-0CA13B7FE849}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CountCharsInArray</RootNamespace>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="CountChars.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
