--- a/CSharpPartOne/Exam/Problem 1 - Math Expression/Problem 1 - Math Expression.csproj
+++ b/CSharpPartOne/Exam/Problem 1 - Math Expression/Problem 1 - Math Expression.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D656F368-722F-4A96-B734-B37711C7AE20}</ProjectGuid>
+    <ProjectGuid>{90E862CA-C231-43BA-97F6-C4406B3E4FA6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Problem_2___Least_Majority_Multiple</RootNamespace>
-    <AssemblyName>Problem 2 - Least Majority Multiple</AssemblyName>
+    <RootNamespace>Problem_1___Math_Expression</RootNamespace>
+    <AssemblyName>Problem 1 - Math Expression</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LeastMajorityMultiple.cs" />
+    <Compile Include="MathExpression.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
