--- a/CSharpPartOne/Exam/Trapezoid/Trapezoid.csproj
+++ b/CSharpPartOne/Exam/Trapezoid/Trapezoid.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D656F368-722F-4A96-B734-B37711C7AE20}</ProjectGuid>
+    <ProjectGuid>{3AE0A66C-054F-4293-BCBC-A5AB3C9BBEB5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Problem_2___Least_Majority_Multiple</RootNamespace>
-    <AssemblyName>Problem 2 - Least Majority Multiple</AssemblyName>
+    <RootNamespace>Trapezoid</RootNamespace>
+    <AssemblyName>Trapezoid</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LeastMajorityMultiple.cs" />
+    <Compile Include="Trapezoid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
