--- a/CSharpPartOne/Exam/04 - Telerik Logo/04 - Telerik Logo.csproj
+++ b/CSharpPartOne/Exam/04 - Telerik Logo/04 - Telerik Logo.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D1D14C76-26D0-4834-B684-E4816D077756}</ProjectGuid>
+    <ProjectGuid>{A5C4FDD5-0E4F-4146-B9B1-39C618ED456B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Problem_5___Pillars</RootNamespace>
-    <AssemblyName>Problem 5 - Pillars</AssemblyName>
+    <RootNamespace>_04___Telerik_Logo</RootNamespace>
+    <AssemblyName>04 - Telerik Logo</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Pillars.cs" />
+    <Compile Include="TelerikLogo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
