--- a/CSharpPartOne/Exam/Problem 2 - A-nacci/Problem 2 - A-nacci.csproj
+++ b/CSharpPartOne/Exam/Problem 2 - A-nacci/Problem 2 - A-nacci.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D1D14C76-26D0-4834-B684-E4816D077756}</ProjectGuid>
+    <ProjectGuid>{D0AF87F0-7908-4AA3-AAFF-66BD82F1F184}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Problem_5___Pillars</RootNamespace>
-    <AssemblyName>Problem 5 - Pillars</AssemblyName>
+    <RootNamespace>Problem_2___A_nacci</RootNamespace>
+    <AssemblyName>Problem 2 - A-nacci</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Pillars.cs" />
+    <Compile Include="A-Nacci.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
