--- a/CSharpPartTwo/01.Arrays/05-MaxIncreasingSequence/05-MaxIncreasingSequence.csproj
+++ b/CSharpPartTwo/01.Arrays/05-MaxIncreasingSequence/05-MaxIncreasingSequence.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8AF747C5-C8D5-4C40-9BA4-5426D71BB15B}</ProjectGuid>
+    <ProjectGuid>{D8143583-153E-4613-A87A-E86A3B78831D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_04_MaximalSequence</RootNamespace>
-    <AssemblyName>04-MaximalSequence</AssemblyName>
+    <RootNamespace>_05_MaxIncreasingSequence</RootNamespace>
+    <AssemblyName>05-MaxIncreasingSequence</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="04-MacimalSequence.cs" />
+    <Compile Include="05-MaxIncreasingSequence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
