--- a/CSharpPartTwo/02.MDArrays/02.MDArrays/03-LongestSequence/03-LongestSequence.csproj
+++ b/CSharpPartTwo/02.MDArrays/02.MDArrays/03-LongestSequence/03-LongestSequence.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{696FAE66-80F1-42D0-B63D-045FD5446831}</ProjectGuid>
+    <ProjectGuid>{FCB9BD99-4457-4931-9471-00DC0F5E6262}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>_03_LongestSequence</RootNamespace>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LongestSequence.cs" />
+    <Compile Include="03-LongestSequence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
