--- a/CSharpPartTwo/07-TextFiles/10-ExtractXML/10-ExtractXML.csproj
+++ b/CSharpPartTwo/07-TextFiles/10-ExtractXML/10-ExtractXML.csproj
@@ -48,7 +48,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="XMLFile1.xml" />
+    <Content Include="XMLFile1.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
