--- a/CSharpPartTwo/08-Strings/11-StringFormat/11-StringFormat.csproj
+++ b/CSharpPartTwo/08-Strings/11-StringFormat/11-StringFormat.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F77C379D-5B4A-449B-92EC-FBA68617EF09}</ProjectGuid>
+    <ProjectGuid>{6C331060-DE20-461D-A045-90C43AB1552C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_10_CharacterLiterals</RootNamespace>
-    <AssemblyName>10-CharacterLiterals</AssemblyName>
+    <RootNamespace>_11_StringFormat</RootNamespace>
+    <AssemblyName>11-StringFormat</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="10-CharacterLiterals.cs" />
+    <Compile Include="11-StringFormat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
