--- a/CSharpPartTwo/08-Strings/12-URLRegex/12-URLRegex.csproj
+++ b/CSharpPartTwo/08-Strings/12-URLRegex/12-URLRegex.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F77C379D-5B4A-449B-92EC-FBA68617EF09}</ProjectGuid>
+    <ProjectGuid>{F6AEEF59-9D6F-41DB-90D4-12EBDF8335B7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_10_CharacterLiterals</RootNamespace>
-    <AssemblyName>10-CharacterLiterals</AssemblyName>
+    <RootNamespace>_12_URLRegex</RootNamespace>
+    <AssemblyName>12-URLRegex</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="10-CharacterLiterals.cs" />
+    <Compile Include="12-URLRegex.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
