--- a/CSharpPartTwo/08-Strings/17-DateTimeAddMinutes/17-DateTimeAddMinutes.csproj
+++ b/CSharpPartTwo/08-Strings/17-DateTimeAddMinutes/17-DateTimeAddMinutes.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F77C379D-5B4A-449B-92EC-FBA68617EF09}</ProjectGuid>
+    <ProjectGuid>{92E9D041-87D9-4F3F-B45B-98A8EE4C4474}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_10_CharacterLiterals</RootNamespace>
-    <AssemblyName>10-CharacterLiterals</AssemblyName>
+    <RootNamespace>_17_DateTimeAddMinutes</RootNamespace>
+    <AssemblyName>17-DateTimeAddMinutes</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="10-CharacterLiterals.cs" />
+    <Compile Include="17-DateTimeAddMinutes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
