--- a/CSharpPartTwo/08-Strings/25-ExtractHTML/25-ExtractHTML.csproj
+++ b/CSharpPartTwo/08-Strings/25-ExtractHTML/25-ExtractHTML.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3B7D7C2E-038D-490D-BE92-5EEDFAE93312}</ProjectGuid>
+    <ProjectGuid>{1EC930FF-0D3E-418E-9C4F-E09718D78D32}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_15_BBCode</RootNamespace>
-    <AssemblyName>15-BBCode</AssemblyName>
+    <RootNamespace>_25_ExtractHTML</RootNamespace>
+    <AssemblyName>25-ExtractHTML</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="15-BBCode.cs" />
+    <Compile Include="25-ExtractHTML.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -49,7 +49,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="page.html" />
-    <Content Include="regex.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
