--- a/CSharpPartTwo/Exam/ExamPrep/02-specialValue/02-specialValue.csproj
+++ b/CSharpPartTwo/Exam/ExamPrep/02-specialValue/02-specialValue.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4306D3F0-ABF1-45D5-BEB4-741402F02010}</ProjectGuid>
+    <ProjectGuid>{40004FB4-1062-4BDD-ADDB-7F6A0FC6246F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_01_9gagNumbers</RootNamespace>
-    <AssemblyName>01-9gagNumbers</AssemblyName>
+    <RootNamespace>_02_specialValue</RootNamespace>
+    <AssemblyName>02-specialValue</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,7 +34,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="01-9gagNumbers.cs" />
+    <Compile Include="02-specialValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
