OOP Defining Classes Part1 - Complete

--- a/OOP/01-Defining-Classes-Part-I/01-12-MobilePhone/01-12-MobilePhone.csproj
+++ b/OOP/01-Defining-Classes-Part-I/01-12-MobilePhone/01-12-MobilePhone.csproj
@@ -41,7 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Battery.cs" />
+    <Compile Include="Call.cs" />
+    <Compile Include="GSMCallHistoryTest.cs" />
+    <Compile Include="GSMTest.cs" />
+    <Compile Include="Display.cs" />
+    <Compile Include="GSM.cs" />
+    <Compile Include="MAIN.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
