--- a/OOP/02-Defining-Classes-Part-II/GenericList/GenericList.csproj
+++ b/OOP/02-Defining-Classes-Part-II/GenericList/GenericList.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GenericList.cs" />
+    <Compile Include="GenericListExtensions.cs" />
     <Compile Include="GenericListTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
