--- a/OOP/05-Object-Oriented-Programming-Principle2/02-Bank/02-Bank.csproj
+++ b/OOP/05-Object-Oriented-Programming-Principle2/02-Bank/02-Bank.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{43A0F984-20FD-4ECC-82A9-4D055117ECB9}</ProjectGuid>
+    <ProjectGuid>{E83BF962-6CDA-4316-BAAA-7C4219802765}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_01_Shapes</RootNamespace>
-    <AssemblyName>01-Shapes</AssemblyName>
+    <RootNamespace>_02_Bank</RootNamespace>
+    <AssemblyName>02-Bank</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,16 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Circle.cs" />
-    <Compile Include="Rectangle.cs" />
-    <Compile Include="Shape.cs" />
+    <Compile Include="Account.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="DepositAccount.cs" />
+    <Compile Include="IDepositable.cs" />
+    <Compile Include="IWithdrawable.cs" />
+    <Compile Include="LoanAccount.cs" />
+    <Compile Include="MortgageAccount.cs" />
     <Compile Include="TEST.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Triangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ShapesDiagram.cd" />
+    <None Include="BankDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
