--- a/OOP/06-Common-Type-System/01-StudentOverride/01-StudentOverride.csproj
+++ b/OOP/06-Common-Type-System/01-StudentOverride/01-StudentOverride.csproj
@@ -41,9 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enumerations\Faculties.cs" />
+    <Compile Include="Person.cs" />
+    <Compile Include="Enumerations\Specialties.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="TEST.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Enumerations\Universities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
