--- a/OOP/07-AcademyPopcorn/07-AcademyPopcorn/07-AcademyPopcorn.csproj
+++ b/OOP/07-AcademyPopcorn/07-AcademyPopcorn/07-AcademyPopcorn.csproj
@@ -61,6 +61,8 @@
     <Compile Include="MovingObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Racket.cs" />
+    <Compile Include="ShootPlayerRacket.cs" />
+    <Compile Include="TrailObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
