--- a/OOP/07-AcademyPopcorn/07-AcademyPopcorn/07-AcademyPopcorn.csproj
+++ b/OOP/07-AcademyPopcorn/07-AcademyPopcorn/07-AcademyPopcorn.csproj
@@ -58,6 +58,7 @@
     <Compile Include="IUserInterface.cs" />
     <Compile Include="KeyboardInterface.cs" />
     <Compile Include="MatrixCoords.cs" />
+    <Compile Include="MeteoriteBall.cs" />
     <Compile Include="MovingObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Racket.cs" />
