--- a/OOP/07-AcademyPopcorn/07-AcademyPopcorn/07-AcademyPopcorn.csproj
+++ b/OOP/07-AcademyPopcorn/07-AcademyPopcorn/07-AcademyPopcorn.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Racket.cs" />
     <Compile Include="ShootPlayerRacket.cs" />
     <Compile Include="TrailObject.cs" />
+    <Compile Include="UnstoppableBall.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
