--- a/OOP/07-AcademyPopcorn/07-AcademyPopcorn/07-AcademyPopcorn.csproj
+++ b/OOP/07-AcademyPopcorn/07-AcademyPopcorn/07-AcademyPopcorn.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AcademyPopcornMain.cs" />
     <Compile Include="Ball.cs" />
     <Compile Include="Block.cs" />
+    <Compile Include="Bullet.cs" />
     <Compile Include="CollisionData.cs" />
     <Compile Include="CollisionDispatcher.cs" />
     <Compile Include="ConsoleInterface.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="MovingObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Racket.cs" />
+    <Compile Include="ShootingRacket.cs" />
     <Compile Include="ShootPlayerRacket.cs" />
     <Compile Include="TrailObject.cs" />
     <Compile Include="UnpassableBlock.cs" />
