--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,5 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+/HTML/01-IntroductionToHTML/01-IntroductionToHTML/nbproject/private
+/HTML/01-IntroductionToHTML/01-VerySimplePage/nbproject/private/
