CSS - Layouts - Complete

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,11 @@ pip-log.txt
 .DS_Store
 /HTML/01-IntroductionToHTML/01-IntroductionToHTML/nbproject/private
 /HTML/01-IntroductionToHTML/01-VerySimplePage/nbproject/private/
+/CSS/02-CSSPresentation/01-UglyFont/nbproject/private/
+/CSS/02-CSSPresentation/03-Divs/nbproject/private/
+/CSS/02-CSSPresentation/04-WinCalculator/nbproject/private/
+/CSS/03-CSSLayout/01-SimpleAccordion/nbproject/private/
+/CSS/03-CSSLayout/02-FancyList/nbproject/private/
+/CSS/03-CSSLayout/03-LoginForm/nbproject/private/
+/CSS/03-CSSLayout/04-W3School/nbproject/private/
+/CSS/03-CSSLayout/05-AppleStore/nbproject/private/
