--- a/Javascript/08-DOMManipulation/08-DOMManipulation/08-DOMManipulation.csproj
+++ b/Javascript/08-DOMManipulation/08-DOMManipulation/08-DOMManipulation.csproj
@@ -59,9 +59,11 @@
   <ItemGroup>
     <Content Include="01-RandomDivs.html" />
     <Content Include="00-MathSinTests.html" />
+    <Content Include="02-CircleMotion.html" />
     <Content Include="css\style.css" />
     <Content Include="js\01-random-divs.js" />
     <Content Include="js\00-math-sin-tests.js" />
+    <Content Include="js\02-circle-motion.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
