--- a/Javascript/09-DOM/09-DOM/09-DOM.csproj
+++ b/Javascript/09-DOM/09-DOM/09-DOM.csproj
@@ -57,6 +57,11 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="01-SelectAllDivs.html" />
+    <Content Include="02-getInputValue.html" />
+    <Content Include="03-colorControl.html" />
+    <Content Include="04-querySelectorShim.html" />
+    <Content Include="css\style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +74,9 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="js\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
