--- a/DataStructures&Algorithms/02-TreesAndTraversals/03-FileTree/03-FileTree.csproj
+++ b/DataStructures&Algorithms/02-TreesAndTraversals/03-FileTree/03-FileTree.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>2383bd50-2413-4314-83e0-954c81673fc8</ProjectGuid>
+    <ProjectGuid>{7C4F6CB9-3265-4387-A8F1-E9A1232F734A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>_03_FileTree</RootNamespace>
-    <AssemblyName>_03_FileTree</AssemblyName>
+    <AssemblyName>03-FileTree</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="File.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
