--- a/DataStructures&Algorithms/02-TreesAndTraversals/03-FileTree/03-FileTree.csproj
+++ b/DataStructures&Algorithms/02-TreesAndTraversals/03-FileTree/03-FileTree.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="File.cs" />
+    <Compile Include="Folder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
