--- a/DataBases/08-EntityFramework/packages/repositories.config
+++ b/DataBases/08-EntityFramework/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\01-BasicUsage\packages.config" />
+  <repository path="..\02-CustomerDAO\packages.config" />
+  <repository path="..\03-FindCustomer\packages.config" />
   <repository path="..\NorthwindDataModel.Data\packages.config" />
 </repositories>
