--- a/DataBases/08-EntityFramework/packages/repositories.config
+++ b/DataBases/08-EntityFramework/packages/repositories.config
@@ -5,5 +5,8 @@
   <repository path="..\03-FindCustomer\packages.config" />
   <repository path="..\04-FindCustomerWithSQL\packages.config" />
   <repository path="..\05-FindAllSales\packages.config" />
+  <repository path="..\07-DifferentContexts\packages.config" />
+  <repository path="..\08-InheritEmployee\packages.config" />
+  <repository path="..\09-AddOrder\packages.config" />
   <repository path="..\NorthwindDataModel.Data\packages.config" />
 </repositories>
