--- a/DataBases/13-MongoDB-and-MongoDB-with-NET/packages/repositories.config
+++ b/DataBases/13-MongoDB-and-MongoDB-with-NET/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\00-01-MongoLabTesting\packages.config" />
   <repository path="..\00-TestingMongo\packages.config" />
 </repositories>
