--- a/DataBases/13-MongoDB-and-MongoDB-with-NET/packages/repositories.config
+++ b/DataBases/13-MongoDB-and-MongoDB-with-NET/packages/repositories.config
@@ -2,4 +2,8 @@
 <repositories>
   <repository path="..\00-01-MongoLabTesting\packages.config" />
   <repository path="..\00-TestingMongo\packages.config" />
+  <repository path="..\MongoChat.Client.Console\packages.config" />
+  <repository path="..\MongoChat.Client.Wpf\packages.config" />
+  <repository path="..\MongoChat.Data\packages.config" />
+  <repository path="..\MongoChat.Model\packages.config" />
 </repositories>
