--- a/DataBases/13-MongoDB-and-MongoDB-with-NET/MongoChat.Data/app.config
+++ b/DataBases/13-MongoDB-and-MongoDB-with-NET/MongoChat.Data/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="MongoChat.Data.ChatSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MongoChat.Data.ChatSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <applicationSettings>
         <MongoChat.Data.ChatSettings>
@@ -15,4 +18,11 @@
             </setting>
         </MongoChat.Data.ChatSettings>
     </applicationSettings>
+    <userSettings>
+        <MongoChat.Data.ChatSettings>
+            <setting name="DatabaseLocalHost" serializeAs="String">
+                <value>mongodb://127.0.0.1</value>
+            </setting>
+        </MongoChat.Data.ChatSettings>
+    </userSettings>
 </configuration>
