--- a/DataBases/15-XML-Processing/02-SongCount-XPath/02-SongCount-XPath.csproj
+++ b/DataBases/15-XML-Processing/02-SongCount-XPath/02-SongCount-XPath.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BCC94D45-3793-4BF0-A69B-C6C7591F458B}</ProjectGuid>
+    <ProjectGuid>{0296BDBC-AF87-4983-8A52-7CED9B17DB06}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_00_XMLTesting</RootNamespace>
-    <AssemblyName>00-XMLTesting</AssemblyName>
+    <RootNamespace>SongCountXPath</RootNamespace>
+    <AssemblyName>02-SongCount-XPath</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
