Exam Prep - Complete

--- a/DataBases/ExamPrep/BookStore/BookStore.Data/BookStore.Data.csproj
+++ b/DataBases/ExamPrep/BookStore/BookStore.Data/BookStore.Data.csproj
@@ -47,10 +47,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BookStoreDbContext.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
